k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: muledraws
  namespace: muledraws
  labels:
    app: muledraws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: muledraws
  template:
    metadata:
      labels:
        app: muledraws
    spec:
      containers:
        - name: muledraws
          image: ghcr.io/homesislab/muledraws:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: ghcr-secret
---
apiVersion: v1
kind: Service
metadata:
  name: muledraws
  namespace: muledraws
spec:
  selector:
    app: muledraws
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: muledraws
  namespace: muledraws
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: muledraws.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: muledraws
                port:
                  number: 80
